onboarding-initiator/deployments/k8s/05-service.yaml
apiVersion: v1
kind: Service

metadata:

  name: onboarding

  namespace: onboarding

spec:

  selector:

    app: onboarding

  ports:

  - port: 80

    targetPort: 8080

    protocol: TCP

  type: ClusterIP
